# nao_interaction_msgs

./: CMakeLists.txt  LICENSE.md  package.xml
action/: NavigateTo.action
msg/: Path.msg  RechargeStatus.msg
srv/: AudioMasterVolume.srv  AudioPlayback.srv  AudioRecorder.srv  BehaviorManagerInfo.srv  Explore.srv  Float.srv  FollowPath.srv  GoToPose.srv  GoToPosture.srv  Int.srv  LearnFace.srv  LedsCreateGroup.srv  LedsEarSetAngle.srv  LedsFade.srv  LedsFadeRGB.srv  LedsList.srv  LedsRotateEyes.srv  LedsSetIntensity.srv  LoadExploration.srv  LocalizationGetErrorMessage.srv  LocalizationTriggerString.srv  MotionInterpolate.srv  MotionSetAngles.srv  RechargeReturnPose.srv  RelocalizeInMap.srv  SetBreathEnabled.srv  SetExternalCollision.srv  SetMoveArmsEnabled.srv  SetTrackerMode.srv  SetTrackerTarget.srv  StartTracker.srv  TrackerLookAt.srv  TrackerPointAt.srv  VisionMotionSensitivity.srv
